# dasboot

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
build-fw/: .ninja_deps  .ninja_log  CMakeCache.txt  atecc_provision.hex  build.ninja  cmake_install.cmake  dasboot  dasboot.hex
build-fw-clean/: CMakeCache.txt  Makefile  atecc_provision  cmake_install.cmake  dasboot  dasboot.hex
cmake/: avr-gcc-toolchain.cmake  print_size_sections.cmake
docs/: bootloader_flash.md  firmware_expectations.md  provisioning.md  testing.md
firmware/: CMakeLists.txt  README.md
firmware/cmake/: avr-gcc-toolchain.cmake
firmware/src/: board.h  boot_contract.h  nvm_flash.h  provision_atecc.c  slots.c  spi.c  spi.h  status_led.c  twi0.c
firmware/src/drivers/: atecc608a.c
src/: app_trampoline.S  board.h  boot_contract.h  boot_eeprom.c  boot_eeprom.h  crc16.h  gpio.h  main.c  mcu.c  mcu.h  nvm_flash.c  nvm_flash.h  slots.h  status_led.c  status_led.h  twi0.h
src/drivers/: atecc608a.c  atecc608a.h  atecc608a_bl.c  atecc608a_bl.h  atecca.cpp  atecca.h  w25q.c  w25q.h
